feat: add show sales by person